log
do.,  8 de may. de 2022  2:16:05: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|4
total_score: 0/70
1a89c0c
do.,  8 de may. de 2022  2:16:47: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
8bd515f
do.,  8 de may. de 2022  2:20:26: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
c1b2c2a
Sun May  8 23:11:49 HSP 2022: 
 tests:  2|2
total_score: 20/70
a6e2a3a
Sun May  8 23:16:01 HSP 2022: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
8764726
Sun May  8 23:26:23 HSP 2022: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
fe0b59f
Sun May  8 23:28:29 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
03046a9
Sun May  8 23:30:09 HSP 2022: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
874cc3f
Sun May  8 23:38:35 HSP 2022: 
 heap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:0:
test.c: In function 'heap_push':
heap.c:45:21: error: 'aux' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         aux -> data = pq->heapArray[parent].data;
         ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
85677fb
Sun May  8 23:39:30 HSP 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function 'heap_push':
heap.c:47:21: error: 'aux' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         aux -> data = pq -> heapArray[parent].data;
         ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
07221d2
Sun May  8 23:42:17 HSP 2022: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:48:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         auxPrio = pq -> heapArray[parent].data;
                 ^
heap.c:49:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         auxData = pq -> heapArray[parent].priority;
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a86442c
Sun May  8 23:42:53 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
cb2717e
Sun May  8 23:43:43 HSP 2022: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|2
total_score: 35/70
01c539a
Sun May  8 23:44:38 HSP 2022: 
 heap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 45/70
987880e
